--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,11 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <script>
+                alert("{{ messages[0] }}");
+            </script>
+        {% endif %}
+    {% endwith %}
 {% endblock %}
