--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,10 @@
     <title>{% block title %}Candlestick Chart{% endblock %}</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    {% block stylesheets %}
+    {% endblock stylesheets %}
     <style>
+        
         #chart-section {
         height: 100vh; /* Set the height to full viewport height */
         }
@@ -56,7 +59,7 @@
         }
 
         .watchlist {
-            margin-top: 20px;
+            margin-top: 1px;
             padding: 10px;
             
         }
@@ -65,12 +68,12 @@
             list-style: none;
             margin: 0;
             padding: 0;
-            max-height: 400px;
+            max-height: 250px;
             overflow-y: auto; /* Enable vertical scrolling */
         }
 
         .watchlist li {
-            margin-top: 10px;
+            margin-top: 5px;
             display: flex;
             justify-content: space-between;
             padding: 5px;
@@ -141,7 +144,7 @@
 
         .nav-primary a {
             display: block;
-            color: #fff;
+            color: rgb(208, 117, 117);
             text-decoration: none;
             padding: 10px 15px;
         }
@@ -176,7 +179,7 @@
         }
         .logout-container {
     position: absolute; /* Change to 'absolute' */
-    bottom: 20px;
+    bottom: 18px;
     
     z-index: 100;
 }
@@ -195,74 +198,6 @@
 
 .logout-link p {
     margin: 0;
-}
-.popup {
-    display: none; /* Hide the popup by default */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-}
-
-.popup-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-#stockSearch {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-}
-
-#stockDropdown {
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-#stockDropdown li {
-    padding: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-}
-
-#stockDropdown li:hover {
-    background-color: #f2f2f2;
-}
-.side-panel {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 250px;
-    width: 250px;
-    height: 100%;
-    background-color: #f5f5f5;
-    overflow-y: auto;
-    padding: 20px;
-}
-
-.side-panel.open {
-    display: block;
 }
 
 .watchlist-form {
@@ -300,9 +235,12 @@
         margin-right: 5px;
     }
     .symbol-info-container {
-            padding: 20px;
+        padding: 5px;
+            padding-left: 20px;
+            padding-right: 20px;
+            align-items: center; 
             background-color: #1e1e26;
-            border-radius: 8px;
+            border-radius: 2px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             animation: slideInUp 0.5s ease-out; /* Add animation for cool effect */
         }
@@ -346,6 +284,7 @@
     }
         
     </style>
+    
 </head>
 <body>
     
@@ -378,16 +317,17 @@
                     </a>
                 </li> -->
                 {% if not current_user.is_authenticated %}
-                    <li class="nav-item {% if 'login' in segment %} active {% endif %}">
-                        <a href="/login">
-                            <i class="fas fa-sign-in-alt"></i>
-                            <p>Login</p>
-                        </a>
-                    </li>
+                    
                     <li class="nav-item {% if 'register' in segment %} active {% endif %}">
                         <a href="/signup">
                             <i class="fas fa-user-plus"></i>
                             <p>Register</p>
+                        </a>
+                    </li>
+                    <li class="nav-item {% if 'login' in segment %} active {% endif %}">
+                        <a href="/">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <p>Login</p>
                         </a>
                     </li>
                 {% endif %}
