--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,9 @@
     {% block stylesheets %}
     {% endblock stylesheets %}
     <style>
-        
+        .form-group input[type="hidden"] {
+    display: none;
+}
         #chart-section {
         height: 100vh; /* Set the height to full viewport height */
         }
@@ -382,10 +384,11 @@
                             <p>Logout</p>
                         </a>
                     </div>
-                
+                {% endif %}
             </ul>
         </div>
     </div>
+    {% if current_user.is_authenticated %}
     <div class="symbol-info-container">
         <h1><strong><span id="current-price"></span></strong></h1>
         <p><span id="symbol"></span></p>
@@ -397,10 +400,10 @@
         <input type="checkbox" class="form-check-input" id="portfolio-email-checkbox" onclick="togglePortfolioEmail()">
         <label class="form-check-label" for="portfolio-email-checkbox">Daily Portfolio email updates</label>
     </div>
-    
+    {% endif %}
     
 </div>
-{% endif %}
+
 
 <!-- End Sidebar -->
 <div class="main-content">
