--- a/templates/base.html
+++ b/templates/base.html
@@ -418,6 +418,9 @@
 
     
 </body>
+{% if current_user.is_authenticated %}	
+<script>document.addEventListener('DOMContentLoaded', getUserEmailPreference);</script>
+{% endif%}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -570,6 +573,7 @@
         updateChartWithCrypto(cryptoName, selectedTimeline);
         updateSymbolInfo();
     }
-    document.addEventListener('DOMContentLoaded', getUserEmailPreference);
+    
 </script>
+
 </html>
